# learn-git

./: CMakeLists.txt  dynamic_mem.cpp  dynamic_mem2.cpp  dynamic_memory.c  main.c  student.h  student_test.cpp
.dev_container/: Dockerfile  devcontainer.json
.vs.code/: extensions.json
c++/: HA3.cpp  canny_edges.cpp  exceptions.cpp  inheritance.cpp  unterricht6.cpp
c++/src/: HA3.cpp  HA3.hpp  main.c  main.cpp  read.cpp  templates.cpp  uncertain.cpp  uncertain.csv  weather_analysis.cpp
c++/test/: test_HA3.cpp
include/: student.h
src/: student.c
test/: testing.cpp
workflow-templates/: workflow.properties.json
